# varpar.cpp

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  check.sh  compile.sh  gen.sh  open.sh  run.sh
.private/: project.json
cmake/: cmake_package_config.cmake.in  cmake_uninstall.cmake.in
inc/varparse.cpp/: VP_Parse.hpp  VPpredefines.hpp
src/: VP_Parse.cpp
tests/: main.cpp
tests/zone/: file.varpar  file2.varpar
utils/inc/sh/: colors.sh
